new button Notify Me

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -18,7 +18,10 @@
     <!--
         Declaring ProductAlertsComponent as a child of ProductListComponent
     -->
-    <app-product-alerts [product]="product"></app-product-alerts>
+    <app-product-alerts 
+        [product]="product"
+        (notify)="onNotify()">
+    </app-product-alerts>
 </div>
 
 
